Some internal changes and some new commands!
- Command `.roleinfo` has been created in order to provide a more detailed and precise information.
- Now this bot does not allow links in the chat unless you have Permission.MESSAGE_MANAGE.